--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/htmx.org/dist/ext/json-enc.js"></script>
-    <script src="https://demo.htmx.org"></script>
-    <link rel="stylesheet" href="static/css/style.css">
-    <title>Fluffy Cat Pizza</title>
-</head>
-<body>
-<header>
-    <h1>Fluffy Cat Pizza Menu</h1>
-</header>
+{% extends 'base.html' %}
+{% block title %} Home {% endblock %}
 {% block content %}
-    <h2>{% block title %} Menu Items {% endblock %}</h2>
+
+
+<h2>Lunch</h2>
     {% for item in menu_items %}
         <div class='menu_items'>
-            <h3>#{{ item[1] }}</h3>
+            <h3>{{ item[1] }}</h3>
             <p>{{ item [2] }}</p>
         </div>
     {% endfor %}
+<h2>Dinner</h2>
+<h2>Dessert</h2>
+<h2>Build You Own</h2>
+
 {% endblock %}
-<footer></footer>
-</body>
-</html>
