--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <h1>Fluffy Cat Pizza Menu</h1>
-        <nav>
+        <nav role="main">
         <ul>
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
@@ -19,7 +19,7 @@
             <li><a href="{{ url_for('partners') }}">Partners</a></li>
         </ul>
     </nav>
-            <nav>
+    <nav role="sub">
         <ul>
             <li><a href="{{ url_for('bakery') }}">Bakery</a></li>
             <li><a href="{{ url_for('breakfast') }}">Breakfast</a></li>
