Fixed titles, added 404 routing

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="static/css/style.css">
-    <title>Fluffy Cat Pizza</title>
+    <title>{% block title %} {% endblock %} - Fluffy Cat Pizza</title>
 </head>
 <body>
 <header>
