Added PUT method to api to update pricing

--- a/templates/bakery.html
+++ b/templates/bakery.html
@@ -8,6 +8,7 @@
         <div class='menu_items'>
             <h3>{{ item[1] }}</h3>
             <p>{{ item [2] }}</p>
+            <p>{{ item [4] }}</p>
         </div>
     {% endfor %}
 {% endblock %}
