--- a/templates/location.html
+++ b/templates/location.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% block title %} Location {% endblock %}
 {% block content %}
-
+<br/>
+<iframe src="https://storage.googleapis.com/maps-solutions-d429xfqao5/locator-plus/46lx/locator-plus.html"
+  width="50%" height="100%"
+  style="border:0;"
+  loading="lazy">
+</iframe>
 
 {% endblock %}
