--- a/templates/dinner.html
+++ b/templates/dinner.html
@@ -8,6 +8,7 @@
         <div class='menu_items'>
             <h3>{{ item[1] }}</h3>
             <p>{{ item [2] }}</p>
+            <p>{{ item [4] }}</p>
         </div>
     {% endfor %}
 {% endblock %}
