--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
 {% block title %} Payment {% endblock %}
 {% block content %}
-  <br/>
-  <section class="section">
-    <div class="container">
-      <button class="button is-primary" id="submitBtn">Purchase!</button>
-    </div>
-  </section>
-
+   <section>
+      <div class="product">
+        <img src="https://i.imgur.com/EHyR2nP.png" alt="The cover of Stubborn Attachments" />
+        <div class="description">
+          <h3>Stubborn Attachments</h3>
+          <h5>$5.00</h5>
+        </div>
+      </div>
+      <form action="/create-checkout-session" method="POST">
+        <button type="submit" id="checkout-button">Checkout</button>
+      </form>
+    </section>
 {% endblock %}
